[gd_scene load_steps=4 format=3 uid="uid://cxprma3kysfqg"]

[ext_resource type="PackedScene" uid="uid://b02vrjremtd2y" path="res://Widget/BaseWidget/Widget.tscn" id="1_a8fay"]
[ext_resource type="Script" path="res://Widget/TextWidget/TextWidget.gd" id="2_bt86m"]
[ext_resource type="StyleBox" uid="uid://76ecu7324xen" path="res://Styles/TextWidget_textedit.tres" id="3_wnasp"]

[node name="TextWidget" instance=ExtResource("1_a8fay")]
script = ExtResource("2_bt86m")
text_size_increment = 3

[node name="TextEdit" type="TextEdit" parent="." index="0"]
layout_mode = 2
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_readonly_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("3_wnasp")
theme_override_styles/focus = ExtResource("3_wnasp")
theme_override_styles/read_only = ExtResource("3_wnasp")
placeholder_text = "Text"
wrap_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="gui_input" from="TextEdit" to="." method="_on_text_edit_gui_input"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="editable_pressed" from="Buttons" to="." method="_on_buttons_editable_pressed"]
[connection signal="resize_pressed" from="Buttons" to="." method="_on_buttons_resize_pressed"]
[connection signal="text_color_changed" from="Buttons" to="." method="_on_buttons_text_color_changed"]
[connection signal="text_size_pressed" from="Buttons" to="." method="_on_buttons_text_size_pressed"]
